@@ -22,6 +22,7 @@ requires 'DicomPack::IO::DicomWriter' => 0.95;
 requires 'Dicom::DCMTK::DCMDump::Get' => 0.03;
 requires 'Dicom::DCMTK::DCMQRSCP::Config' => 0.03;
 requires 'Dicom::File::Detect' => 0.03;
+requires 'Dicom::UID::Generator' => 0.01;
 requires 'File::Find::Rule::Dicom' => 0.04;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
