@@ -1,4 +1,5 @@
 0.07
+ - Add Dicom::UID::Generator in 0.01 version.
  - Add LICENSE file.
  - Fix REPOSITORY section in doc.
  - Update Dicom::File::Detect to 0.03 version.
